--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,95 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.contact {
+  display: flex;
+  justify-content: space-between;
+  border: 2px solid;
+  margin-bottom: 2px;
+  margin-left: 12px;
+  margin-right: 5px;
+  background-color: #fdeff2;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.heading1 {
+  background-color: rgb(196, 13, 13);
+  color: white;
+  text-align: center;
+}
+
+.addContact {
+  font-weight: 800;
+  font-size: 34px;
+
+}
+
+.heading {
+  margin-left: 20px;
+  line-height: 1.5;
+}
+
+.lable {
+  font-size: 26px;
+  color: rgb(87, 85, 85);
+}
+
+.lable-input {
+  height: 27px;
+  width: 250px;
+  margin-top: 5px;
+  border-radius: 5px;
+}
+
+.btn {
+  margin-top: 10px;
+  height: fit-content;
+  width: 130px;
+  font-size: 18px;
+  color: rgb(196, 13, 13);
+}
+
+.contact-list {
+  margin-left: 20px;
+  font-size: 30px;
+
+}
+
+.list {
+  width: 100%;
+}
+
+@media only screen and (max-width: 305px) {
+  lable-input {
+    height: 20px;
+    width: 80px;
+    margin-top: 3px;
+    border-radius: 5px;
+    margin-left: auto;
+
+  }
+
+  .lable {
+    font-size: 20px;
+    color: rgb(87, 85, 85);
+  }
+
+  .addContact {
+    font-weight: 600;
+    font-size: 22px;
+  }
+
+  .heading1 {
+    background-color: rgb(196, 13, 13);
+    color: white;
+    text-align: center;
+    font-size: 20px;
+  }
+
+  .list {
+    width: fit-content;
+    font-size: small;
+  }
+
+  .contact-list {
+    margin-left: 10px;
+    font-size: 20px;
+
+  }
 }
